--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,12 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  .row
+    .column
+      h1= title
+      p Welcome to #{title}
+  
+  .row
+    .column.MainContent
+
+  include partials/chat
