--- a/views/index.pug
+++ b/views/index.pug
@@ -3,10 +3,6 @@ extends layout
 block content
   .row
     .column
-      h1= title
-      p Welcome to #{title}
-  
-  .row
-    .column.MainContent
+      h1 Express.app
+      p Just a paragraph here
 
-  include partials/chat
