--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,5 +5,6 @@ html
     link(rel='stylesheet', href='/dist/css/main.css')
     link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
   body
-    div.container
-      block content
+    .layout
+      .container
+        block content
