--- a/views/partials/chat.pug
+++ b/views/partials/chat.pug
@@ -1,10 +1,9 @@
 .container.clearfix
   .chat
     .chat-header.clearfix
-      img(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/chat_avatar_01_green.jpg', alt='avatar')
+      img(src='http://i.imgur.com/OpcZcLm.png', alt='avatar' width='64' height='64')
       .chat-about
-        .chat-with Chat with Martin Bot
-      i.fa.fa-star
+        .chat-with Chat with Martin the Bot
     // end chat-header
     .chat-history
       ul
@@ -12,12 +11,10 @@
           .message-data.align-right
             span.message-data-time 10:10 AM, Today
             span.message-data-name Martin
-            i.fa.fa-circle.me
           .message.other-message.float-right
             | Hi Vincent, how are you?
           .message-data
             span.message-data-name
-              i.fa.fa-circle.online
               |  Vincent
             span.message-data-time 10:12 AM, Today
           .message.my-message
@@ -26,7 +23,6 @@
           .message-data.align-right
             span.message-data-time 10:14 AM, Today
             span.message-data-name Martin
-            i.fa.fa-circle.me
           .message.other-message.float-right
             | Are you ready to get started?
 
@@ -35,7 +31,7 @@
       textarea#message-to-send(name='message-to-send', placeholder='Type your message', rows='3')
       i.fa.fa-file-o
       i.fa.fa-file-image-o
-      button Send
+      button#js-send Send
     // end chat-message
   // end chat
 // end container
